<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name" tools:ignore="MissingTranslation">Mini_Project</string>
    <string name="healthyme" translatable="false">\@HealthyMe</string>
    <string name="your_own_health_manager" translatable="false">Your Own Health Manager</string>
    <string name="you_think_managing_your_health_and_fitness_is_tough" translatable="false">You think managing your health and fitness is tough,</string>
    <string name="not_anymore" translatable="false">NOT ANYMORE</string>
    <string name="log_in" translatable="false">LOG IN</string>
    <string name="sign_in" translatable="false">SIGN IN</string>
    <string name="first_time" translatable="false">First Time?</string>
    <string name="previous_user" translatable="false">Previous User?</string>
    <string name="todo" translatable="false">TODO</string>
    <string name="email" translatable="false">Email</string>
    <string name="password" translatable="false">Password</string>
    <string name="log_in2" translatable="false">LOG IN</string>
    <string name="enter_email" translatable="false">enter email</string>
    <string name="enter_password" translatable="false">enter password</string>
    <string name="welcome_back" translatable="false">Welcome Back</string>
    <string name="please_register" translatable="false">Please Register</string>
    <string name="name" translatable="false">Name</string>
    <string name="gender" translatable="false">Gender</string>
    <string name="age" translatable="false">Age</string>
    <string name="email2" translatable="false">Email</string>
    <string name="password2" translatable="false">Password</string>
    <string name="enter_name" translatable="false">enter name</string>
    <string name="enter_age" translatable="false">enter age</string>
    <string name="enter_gender" translatable="false">enter gender</string>
    <string name="enter_email2" translatable="false">enter email</string>
    <string name="enter_password2" translatable="false">enter password</string>
    <string name="sign_in2" translatable="false">SIGN IN</string>
    <string name="todo2" translatable="false">TODO</string>
    <string name="height" translatable="false">Height</string>
    <string name="weight" translatable="false">Weight</string>
    <string name="bmi" translatable="false">BMI</string>
    <string name="home_remedies" translatable="false">HOME REMEDIES</string>
    <string name="bmi_calculator" translatable="false">BMI Calculator</string>
    <string name="physical_health" translatable="false">PHYSICAL HEALTH</string>
    <string name="mental_health" translatable="false">MENTAL HEALTH</string>
    <string name="elderly_people" translatable="false">ELDERLY PEOPLE</string>
    <string name="height2" translatable="false">Height</string>
    <string name="enter_height" translatable="false">enter height</string>
    <string name="enter_weight" translatable="false">enter weight</string>
    <string name="weight2" translatable="false">Weight</string>
    <string name="p" translatable="false">P</string>
    <string name="enter_password_min_7" translatable="false">enter password (min 7)</string>
    <string name="enter_height_in_cm" translatable="false">enter height in cm</string>
    <string name="enter_weight_in_kg" translatable="false">enter weight in kg</string>
    <string name="sign_up" translatable="false">SIGN UP</string>
    <string name="sign_up2" translatable="false">SIGN UP</string>
    <string name="textview" translatable="false">TextView</string>
    <string name="textview2" translatable="false">TextView</string>
    <string name="textview3" translatable="false">TextView</string>
    <string name="textview4" translatable="false">TextView</string>
    <string name="name2" translatable="false">NAME</string>
    <string name="age2" translatable="false">AGE</string>
    <string name="gender2" translatable="false">GENDER</string>
    <string name="email3" translatable="false">EMAIL</string>
    <string name="enter_gender_all_caps" translatable="false">enter gender (all CAPS)</string>
    <string name="update" translatable="false">Update</string>
    <string name="show" translatable="false">Show</string>
    <string name="bmr" translatable="false">BMR</string>
    <string name="height3" translatable="false">HEIGHT</string>
    <string name="weight3" translatable="false">WEIGHT</string>
    <string name="your_profile" translatable="false">Your Profile</string>
    <string name="physical_health2" translatable="false">Physical Health</string>
    <string name="enter_your_activity_level_sedentary_low_active_very" translatable="false">Enter your activity level (sedentary, low, active, very)</string>
    <string name="enter_your_average_amount_of_water_intake_in_one_day" translatable="false">Enter your average amount of water intake in one day</string>
    <string name="enter_any_allergies_or_food_exceptions_to_avoid" translatable="false">Enter any allergies or food exceptions to avoid</string>
    <string name="enter" translatable="false">enter</string>
    <string name="enter_in_litres" translatable="false">enter (in Litres)</string>
    <string name="enter2" translatable="false">enter</string>
    <string name="go" translatable="false">GO</string>
    <string name="breakfast" translatable="false">Breakfast</string>
    <string name="snacks" translatable="false">Snacks</string>
    <string name="lunch" translatable="false">Lunch</string>
    <string name="dinner" translatable="false">Dinner</string>
    <string name="calorie_intake" translatable="false">Calorie Intake</string>
    <string name="textview5" translatable="false">TextView</string>
    <string name="textview6" translatable="false">TextView</string>
    <string name="textview7" translatable="false">TextView</string>
    <string name="textview8" translatable="false">TextView</string>
    <string name="textview9" translatable="false">TextView</string>
    <string name="show_diet_plan" translatable="false">Show Diet Plan</string>
    <string name="Textview" translatable="false">TextView</string>
    <string name="Textview2" translatable="false">TextView</string>
    <string name="Textview3" translatable="false">TextView</string>
    <string name="Textview4" translatable="false">TextView</string>
    <string name="Textview5" translatable="false">TextView</string>
    <string name="dob" translatable="false">DOB</string>
    <string name="dd_mm_yyyy" translatable="false">DD/MM/YYYY</string>
    <string name="enter_your_blood_sugar_level" translatable="false">Enter your blood sugar level</string>
    <string name="enter_your_blood_pressure_level" translatable="false">Enter your blood pressure level</string>
    <string name="enter_in_mg_dl" translatable="false">enter in mg/dL</string>
    <string name="enter_in_mmhg" translatable="false">enter in mmHg</string>
    <string name="your_blood_pressure_is_high_and_you_should_consider_consulting_a_doctor" translatable="false">Your Blood Pressure is high and you should consider consulting a doctor.</string>
    <string name="your_blood_pressure_is_low_and_you_should_consider_consulting_a_doctor" translatable="false">Your Blood Pressure is low and you should consider consulting a doctor.</string>
    <string name="your_blood_sugar_level_is_high_and_you_should_consider_consulting_a_doctor" translatable="false">Your Blood Sugar level is high and you should consider consulting a doctor.</string>
    <string name="your_blood_sugar_level_is_low_and_you_ahould_consider_consulting_a_doctor" translatable="false">Your Blood Sugar level is low and you ahould consider consulting a doctor.</string>
    <string name="update_your_profile" translatable="false">Update Your Profile</string>
    <string name="update2" translatable="false">Update</string>
    <string name="nani_ke_nuskhe" translatable="false">Nani ke nuskhe</string>
    <string name="nani_ke_nuskhe2" translatable="false">Nani ke Nuskhe</string>
    <string name="textview30" translatable="false">TextView</string>
    <string name="textview31" translatable="false">TextView</string>
    <string name="textview32" translatable="false">TextView</string>
    <string name="textview33" translatable="false">TextView</string>
    <string name="test1" translatable="false">test1</string>
    <string name="out1" translatable="false">out1</string>
    <string name="out2" translatable="false">out2</string>
    <string name="test3" translatable="false">test3</string>
    <string name="test4" translatable="false">test4</string>
    <string name="test5" translatable="false">test5</string>
    <string name="test2" translatable="false">test2</string>
    <string name="out3" translatable="false">out3</string>
    <string name="out4" translatable="false">out4</string>
    <string name="out5" translatable="false">out5</string>
    <string name="test6" translatable="false">test6</string>
    <string name="test7" translatable="false">test7</string>
    <string name="test8" translatable="false">test8</string>
    <string name="test9" translatable="false">test9</string>
    <string name="nausea" translatable="false">nausea</string>
    <string name="ginger_1_2_inches" translatable="false">ginger (1-2 inches)</string>
    <string name="hydrate_yourself_and_ginger_1_2_inches" translatable="false">hydrate yourself and ginger (1-2 inches)</string>
    <string name="menstrual_cramps" translatable="false">menstrual cramps</string>
    <string name="inflammation" translatable="false">inflammation</string>
    <string name="cholesterol" translatable="false">cholesterol</string>
    <string name="headaches" translatable="false">headaches</string>
    <string name="cumin_seeds_exercise_and_ginger_1_2_inches" translatable="false">cumin seeds, exercise and ginger (1-2 inches)</string>
    <string name="turmeric_1_2_teaspoon" translatable="false">turmeric (1/2 teaspoon)</string>
    <string name="garlic_2_3_cloves" translatable="false">garlic (2-3 cloves)</string>
    <string name="pain" translatable="false">pain</string>
    <string name="digestion" translatable="false">digestion</string>
    <string name="insomnia" translatable="false">insomnia</string>
    <string name="sore_throat" translatable="false">sore throat</string>
    <string name="stomach_ache" translatable="false">stomach ache</string>
    <string name="cloves_2_3" translatable="false">cloves (2-3)</string>
    <string name="cumin_1_teaspoon" translatable="false">cumin (1 teaspoon)</string>
    <string name="reduce_tea_coffee_and_take_cumin_1_teaspoon" translatable="false">reduce tea/ coffee and take cumin (1 teaspoon)</string>
    <string name="honey_1_tablespoon" translatable="false">honey (1 tablespoon)</string>
    <string name="cardamom_1_2_teaspoon" translatable="false">cardamom (1/2 teaspoon)</string>
    <string name="intake" translatable="false">Intake</string>
    <string name="mental_health2" translatable="false">Mental Health</string>
    <string name="a_never_b_some_days_c_half_days_d_everyday" translatable="false">(A)Never, (B)Some days, (C)Half days, (D)Everyday</string>
    <string name="over_the_last_2_weeks_how_often_have_you_been_bothered_by_any_of_the_following_problems_enter_in_a_b_c_d" translatable="false">Over the last 2 weeks, how often have you been bothered by any of the following problems? (Enter in A,B,C,D)</string>
    <string name="little_interest_or_pleasure_in_doing_things" translatable="false">Little interest or pleasure in doing things</string>
    <string name="feeling_down_depressed_or_hopeless" translatable="false">Feeling down, depressed, or hopeless</string>
    <string name="trouble_falling_or_staying_asleep_or_sleeping_too_much" translatable="false">Trouble falling or staying asleep, or sleeping too much</string>
    <string name="feeling_tired_or_having_little_energy" translatable="false">Feeling tired or having little energy</string>
    <string name="logout">Logout</string>
</resources>