<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Nuskhe_activity">

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="261dp"
        android:layout_height="75dp"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/textView2"
            android:layout_width="194dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="#1C4A46"
            android:contextClickable="false"
            android:elegantTextHeight="true"
            android:text="@string/healthyme"
            android:textAlignment="center"
            android:textColor="#B388FF"
            android:textColorHighlight="#2196F3"
            android:textColorHint="#3F51B5"
            android:textCursorDrawable="@android:drawable/btn_star_big_on"
            android:textSize="40sp"
            android:textStyle="bold|italic"
            tools:ignore="InefficientWeight,TextSizeCheck" />
    </LinearLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="73dp"
        android:layout_height="73dp"
        android:background="#1C4A46"
        app:layout_constraintEnd_toStartOf="@+id/linearLayout"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/imageView3"
            android:layout_width="70dp"
            android:layout_height="60dp"
            android:layout_marginTop="16dp"
            android:contentDescription="@string/todo2"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.333"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/logo_project"
            tools:ignore="ContentDescription,VisualLintBounds" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="77dp"
        android:layout_height="75dp"
        android:background="#1C4A46"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/linearLayout"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="VisualLintBounds">

        <Button
            android:id="@+id/button3"
            android:layout_width="51dp"
            android:layout_height="45dp"
            android:text="@string/p"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:ignore="TouchTargetSizeCheck" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <TextView
        android:id="@+id/textView"
        android:layout_width="406dp"
        android:layout_height="53dp"
        android:text="@string/nani_ke_nuskhe2"
        android:textAlignment="center"
        android:textColor="#43A047"
        android:textSize="38sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.4"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout"
        tools:ignore="TextSizeCheck" />

</androidx.constraintlayout.widget.ConstraintLayout>